--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -74,13 +74,14 @@
         "tsx": "never"
       }
     ],
-    // "@typescript-eslint/explicit-function-return-type": [
-    //   "error",
-    //   {
-    //     "allowExpressions": true
-    //   }
-    // ],
-    "@typescript-eslint/camelcase": "off"
+    "@typescript-eslint/explicit-function-return-type": [
+      "error",
+      {
+        "allowExpressions": true
+      }
+    ],
+    "@typescript-eslint/camelcase": "off",
+    "react/no-danger": "off"
   },
   "settings": {
     "react": {
